[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dnspython>=2.7.0",
    "email-validator>=2.3.0",
    "flask-wtf>=1.2.2",
    "flask==3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn==22.0.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt==2.8.0",
    "python-decouple==3.8",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "wtforms>=3.2.1",
    "flask-limiter>=3.12",
    "sentry-sdk>=2.35.1",
    "flask-session>=0.8.0",
    "pillow==10.4.0",
    "bcrypt>=4.3.0",
    "redis>=6.4.0",
    "pytest==8.2.2",
]
