
[project]
name = "outlook-automation"
version = "0.1.0"
description = "Flask application for Office 365 automation"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.0",
    "flask-session>=0.5.0",
    "flask-sqlalchemy>=3.0.0",
    "flask-wtf>=1.1.0",
    "flask-limiter>=3.0.0",
    "wtforms>=3.0.0",
    "bcrypt>=4.0.0",
    "selenium>=4.10.0",
    "requests>=2.28.0",
    "redis>=4.5.0",
    "dnspython>=2.3.0",
    "gunicorn>=21.0.0",
    "sentry-sdk>=1.25.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
